<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/setup_your_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/Setup_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_settings"
        android:textSize="20sp"
        android:text="@string/Body_Setup"
        android:layout_below="@id/setup_your_plan"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/child5"
        android:layout_height="200dp"
        android:layout_below="@id/change_settings"
        android:background="#7D2D8A">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/pie_chart_img"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setup_wizard"
            android:text="@string/Setup_wizard"
            android:textColor="#FFFFFF"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="30sp"/>
        <view
            android:layout_width="100dp"
            android:id="@+id/view_setup_wizard"
            android:layout_height="2dp"
            android:background="#FFFFFF"
            android:layout_below="@id/setup_wizard"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recomended"
            android:text="@string/wizard_body"
            android:layout_below="@id/view_setup_wizard"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/child5"
        android:background="#D85280"
        android:id="@+id/child6">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/equilizer"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_from_scratch"
            android:text="@string/start_from_scratch"
            android:textColor="#FFFFFF"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="30sp"/>
        <view
            android:layout_width="100dp"
            android:id="@+id/view_start_from_scratch"
            android:layout_height="2dp"
            android:background="#FFFFFF"
            android:layout_below="@id/start_from_scratch"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/for_example"
            android:text="@string/wizard_body"
            android:layout_below="@id/view_start_from_scratch"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#046508"
        android:layout_below="@id/child6"
        android:id="@+id/child7">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/note"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/templates"
            android:text="@string/templates"
            android:textColor="#FFFFFF"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="30sp"/>
        <view
            android:layout_width="100dp"
            android:id="@+id/view_templates"
            android:layout_height="2dp"
            android:background="#FFFFFF"
            android:layout_below="@id/templates"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/beginners"
            android:text="@string/for_complete_beginners"
            android:layout_below="@id/view_templates"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    </RelativeLayout>
</RelativeLayout>